<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#dddfde"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/base_white">

            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="8dp"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/user_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/user_icon"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_toRightOf="@id/user_icon"
                android:text="MyName" />

            <TextView
                android:id="@+id/user_id_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/user_name_tv"
                android:layout_alignTop="@id/user_icon"
                android:layout_marginTop="32dp"
                android:text="好借 ID: 10000" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#dddfde"
            android:orientation="vertical">

            <TextView
                android:id="@+id/favorite_tv"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@color/base_white"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:text="@string/menu_me_favorite"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/my_order_tv"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="1dp"
                android:background="@color/base_white"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:text="@string/menu_me_ordered"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/settings_tv"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="8dp"
                android:background="@color/base_white"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:text="@string/menu_item_setting"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/about_tv"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="1dp"
                android:background="@color/base_white"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:text="@string/menu_item_about"
                android:textSize="28sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>